--- a/client/src/index-style.scss
+++ b/client/src/index-style.scss
@@ -1,6 +1,7 @@
 body{
   margin: 0px;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 h2, h3, p{
@@ -61,6 +62,7 @@ header, .main, .footer{
 
 .main-container{
   box-shadow: 0 .5px 5px lightgray;
+  display: flex;
 }
 
 
@@ -122,6 +124,8 @@ header, .main, .footer{
 .profile-card{
 
   box-shadow: 0 .5px 5px lightgray;
+  flex-basis: 30%;
+  background-color: white;
 
   .bg{
     background: url('/images/bg-image.jpg');
