--- a/client/src/components/LoadingPage/loadingPage.css
+++ b/client/src/components/LoadingPage/loadingPage.css
@@ -1,11 +1,11 @@
 .loading-container{
   background-color: white;
-  position: absolute;
+  position: sticky;
   z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   display: flex;
   align-items: center;
