Added connection to AWS S3 Bucket

--- a/client/src/components/Buttons/Buttons_style.css
+++ b/client/src/components/Buttons/Buttons_style.css
@@ -12,6 +12,10 @@
   padding: 0 !important;
 }
 
+.button-loading-icon{
+  font-size: 2rem !important;
+}
+
 .submit-button{
   border: none;
   background-color: rgb(247, 247, 247);
