--- a/client/src/index-style.scss
+++ b/client/src/index-style.scss
@@ -128,7 +128,7 @@ header, .main, .footer{
   background-color: white;
 
   .bg{
-    background: url('/images/bg-image.jpg');
+    background: url('images/bg-image.jpg');
     height: 300px;
 
     .bg-image{
