--- a/client/src/index-style.scss
+++ b/client/src/index-style.scss
@@ -141,6 +141,10 @@ header, .main, .footer{
 
   }
 
+  .loading-container{
+    position: sticky !important;
+  }
+
 
   .profile-info-flex{
     display: flex;
