--- a/client/src/components/FeedPage/feed.css
+++ b/client/src/components/FeedPage/feed.css
@@ -3,12 +3,17 @@
   flex-direction: row;
   justify-content: start;
   height: 100%;
+  min-height: 100vh;
 
 }
 
 .feed-container .content-home{
   width: 50em;
 }
+.feed-container .profile-card .content-home{
+  width: auto !important;
+}
+
 .feed-container .content-home-right{
   padding: 1em;
   box-sizing: border-box;
@@ -37,6 +42,6 @@
 .feed-container .profile-card{
   position: sticky;
   top: 0;
-  overflow-y: scroll;
+  overflow: hidden;
   height: 100vh;
 }
