--- a/client/src/index-style.scss
+++ b/client/src/index-style.scss
@@ -1,155 +1,189 @@
-body{
+body {
   margin: 0px;
   box-sizing: border-box;
   overflow-x: hidden;
 }
 
-h2, h3, p{
+h2,
+h3,
+p {
   padding: 0;
   margin: 0;
 }
 
-
-.App{
+.App {
   height: 100%;
 }
 
-.Users{
+.Users {
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
 
-header, .main, .footer{
+header,
+.main,
+.footer {
   width: 90%;
 }
 
-.header-container{
+.header-container {
   position: sticky;
   background-color: white;
-  top: 0; z-index: 10000;
-  padding-bottom: .5em;
-  box-shadow: 0 .5px 5px lightgray;
-  color: #1B74E4;
+  top: 0;
+  z-index: 10000;
+  padding-bottom: 0.5em;
+  box-shadow: 0 0.5px 5px lightgray;
+  color: #1b74e4;
 
-  header{
+  header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between; align-items: center;
+    justify-content: space-between;
+    align-items: center;
     margin: 0 auto;
 
-    .name{
+    .name {
       padding: 1rem;
       font-size: 2rem;
       font-weight: 600;
     }
-  
-    ul{
+
+    ul {
       all: unset;
+      display: flex;
+      justify-content: flex-end;
+      gap: 2em;
     }
-  
-    li{
+
+    li {
       all: unset;
-      padding: 2em;
+      padding: 1em;
     }
-  
   }
 }
 
-.loading-icon{
+.drop-down {
+  background-color: white;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  padding: 1em;
+
+  .drop-down-header {
+    display: flex;
+    justify-content: end;
+  }
+}
+
+.header-user-profile {
+  display: flex;
+  color: black;
+  align-items: center;
+  gap: 1em;
+}
+
+.cross-icon-div {
+  &:hover {
+    cursor: pointer;
+  }
+
+  .cross-icon {
+    height: 2em;
+    width: 2em;
+  }
+}
+
+.loading-icon {
   width: 10em;
   margin: auto auto;
 }
 
-.main-container{
-  box-shadow: 0 .5px 5px lightgray;
+.main-container {
+  box-shadow: 0 0.5px 5px lightgray;
   display: flex;
 }
 
-
-.footer-container{
+.footer-container {
   min-height: 5em;
   align-items: center;
   display: flex;
   background-color: white;
 
-  .footer{
+  .footer {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: auto auto;
-    >*{
+    > * {
       flex-basis: 100%;
     }
   }
 }
 
-@media (max-width: 650px){
-  .header-container header{
-    flex-direction: column;
-  }
-
-  .profile-info{
+@media (max-width: 650px) {
+  .profile-info {
     flex-direction: column !important;
-    
-    >*{
+
+    > * {
       width: 100%;
       justify-content: center;
       align-items: center;
     }
-    .profile-link{
+    .profile-link {
       display: flex;
       flex-direction: column;
     }
 
-    .profile-name-img{
+    .profile-name-img {
       justify-content: center;
 
-      .profile-name{
+      .profile-name {
         flex-basis: 40%;
       }
     }
   }
 }
 
-.inline-icon{
+.inline-icon {
   width: 1em;
 }
 
-.checkmark{
+.checkmark {
   width: 0.8rem;
-  background-color: #1B74E4;
+  background-color: #1b74e4;
   border-radius: 50%;
 }
 
-.profile-card{
-
-  box-shadow: 0 .5px 5px lightgray;
+.profile-card {
+  box-shadow: 0 0.5px 5px lightgray;
   flex-basis: 40%;
   background-color: white;
 
-  .bg{
-    background: url('images/bg-image.jpg');
+  .bg {
+    background: url("images/bg-image.jpg");
     height: 300px;
 
-    .bg-image{
+    .bg-image {
       width: 90%;
       max-width: 850px;
       margin: 0 auto;
       height: 100%;
     }
-
   }
 
-  .loading-container{
+  .loading-container {
     position: sticky !important;
   }
 
-  .profile-info-flex{
+  .profile-info-flex {
     display: flex;
     flex-direction: row;
     justify-content: center;
 
-    .profile-info{
+    .profile-info {
       width: 80%;
       max-width: 755px;
       display: flex;
@@ -159,7 +193,7 @@ header, .main, .footer{
       padding: 0.5em 3em;
     }
 
-    .profile-name-img{
+    .profile-name-img {
       display: flex;
       flex-direction: row;
       gap: 1em;
@@ -168,46 +202,46 @@ header, .main, .footer{
     }
   }
 
-  .profile-img-container{
+  .profile-img-container {
     width: 80px;
     border-radius: 50%;
     border: 1px solid lightgray;
-    transition: all .2s ease-out;
+    transition: all 0.2s ease-out;
     aspect-ratio: 1/1;
     background-color: lightslategray;
     overflow: hidden;
-    
+
     display: flex;
     justify-content: center;
 
-    &:hover{
+    &:hover {
       cursor: pointer;
       transform: scale(1.1);
     }
 
-    .profile-img{
-      height: 100%
+    .profile-img {
+      height: 100%;
     }
   }
 
-  .profile-name{
+  .profile-name {
     flex-basis: 70%;
-    span{
+    span {
       margin: 0 0.5em;
     }
 
-    .inline-icon{
+    .inline-icon {
       width: 15px;
-      background-color: #1B74E4;
+      background-color: #1b74e4;
       border-radius: 50%;
     }
   }
 
-  .profile-link{
+  .profile-link {
     flex-basis: 35%;
 
-    .profile-link-button{
-      background-color: #1B74E4;
+    .profile-link-button {
+      background-color: #1b74e4;
       border: none;
       width: 90%;
       padding: 0 2em;
@@ -217,33 +251,33 @@ header, .main, .footer{
       flex-direction: row;
       align-items: center;
       justify-content: center;
-      gap: .4em;
+      gap: 0.4em;
 
-      transition: all .2s ease-out;
+      transition: all 0.2s ease-out;
 
-      span{
+      span {
         color: white;
         font-weight: 500;
         font-size: 1.1em;
       }
 
-      &:hover{
+      &:hover {
         background-color: #165baf;
       }
 
       cursor: pointer;
     }
-    
-    .cube-icon{
+
+    .cube-icon {
       width: 17px;
     }
 
-    .open-icon{
+    .open-icon {
       width: 1em;
     }
 
-    .website-link{
-      font-size: .8rem;
+    .website-link {
+      font-size: 0.8rem;
       color: lightslategray;
 
       width: 90%;
@@ -252,13 +286,13 @@ header, .main, .footer{
       align-items: center;
       justify-content: center;
       height: 1.5em;
-      margin-top: .2rem;
-      gap: .5em;
+      margin-top: 0.2rem;
+      gap: 0.5em;
     }
   }
 }
 
-.profile-nav{
+.profile-nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -268,88 +302,88 @@ header, .main, .footer{
   margin: 0 auto;
   border-top: 1px solid lightgray;
 
-  .profile-nav-right{
+  .profile-nav-right {
     height: 3.5em;
     width: 4em;
 
-    .dropdown-selection{
+    .dropdown-selection {
       display: flex;
       justify-content: center;
 
-      &:hover{
+      &:hover {
         background-color: lightgray;
         border-radius: 4px;
       }
     }
   }
 
-
-  .profile-nav-selections{
+  .profile-nav-selections {
     display: flex;
     flex-direction: row;
-    
-    >*{
+
+    > * {
       position: relative;
       width: 4em;
       text-align: center;
-      padding:1em;
-      margin: .5em 0;
+      padding: 1em;
+      margin: 0.5em 0;
       cursor: pointer;
-      transition: background-color, border-radius .2s ease-out;
+      transition: background-color, border-radius 0.2s ease-out;
 
-      a{
+      a {
         position: absolute;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
       }
 
-      &:hover{
+      &:hover {
         background-color: lightgray;
         border-radius: 4px;
       }
-      
     }
 
-    .currentNav{
-      border-bottom: 5px solid #1B74E4;
+    .currentNav {
+      border-bottom: 5px solid #1b74e4;
     }
   }
 
-  .curr-selection{
-    border-bottom: 2px solid #1B74E4;
+  .curr-selection {
+    border-bottom: 2px solid #1b74e4;
   }
 
-  .dropdown-selection{
+  .dropdown-selection {
     position: relative;
   }
-  
-  .dropdown{
+
+  .dropdown {
     position: absolute;
     background-color: white;
-    top: 3em; left: -0.2em;
+    top: 3em;
+    left: -0.2em;
     width: 15em;
     border: 1px solid lightgray;
     border-radius: 5px;
-    box-shadow: 0 .5px 5px lightgray;
+    box-shadow: 0 0.5px 5px lightgray;
     align-items: center;
 
-    >*{
+    > * {
       padding: 0.5em;
       margin: 0.3em;
       font-weight: 500;
       cursor: pointer;
       text-align: start;
-      transition: all .2s ease-out;
+      transition: all 0.2s ease-out;
 
-      &:hover{
+      &:hover {
         background-color: lightgray;
         border-radius: 4px;
       }
     }
   }
 
-
-  .dropdown-selection{
+  .dropdown-selection {
     display: flex;
     flex-direction: row;
     align-items: center;
